[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Home.wav" type="AudioStream" id=1]
[ext_resource path="res://UI/SettingsMenu.gd" type="Script" id=2]

[node name="SettingsMenu" type="Control"]
anchor_left = 0.002
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.952
margin_top = -2.0
margin_bottom = -2.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.207843, 0.207843, 1 )

[node name="SettingTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Gameplay" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Audio" type="Tabs" parent="SettingTabs"]
margin_right = 40.0
margin_bottom = 24.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Audio"]
margin_left = 4.0
margin_top = 31.0
margin_right = 1014.0
margin_bottom = 596.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="Settings" type="VBoxContainer" parent="SettingTabs/Audio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 985.0
margin_bottom = 540.0

[node name="MasterVol" type="HBoxContainer" parent="SettingTabs/Audio/MarginContainer/Settings"]
margin_right = 960.0
margin_bottom = 16.0

[node name="DisplaymodeLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/Settings/MasterVol"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 15.0
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/Settings/MasterVol"]
margin_left = 560.0
margin_right = 960.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -80.0
max_value = 0.0

[node name="MusicVol" type="HBoxContainer" parent="SettingTabs/Audio/MarginContainer/Settings"]
margin_top = 20.0
margin_right = 960.0
margin_bottom = 36.0

[node name="DisplaymodeLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/Settings/MusicVol"]
margin_top = 1.0
margin_right = 91.0
margin_bottom = 15.0
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/Settings/MusicVol"]
margin_left = 560.0
margin_right = 960.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -80.0
max_value = 0.0

[node name="Graphics" type="Tabs" parent="SettingTabs"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Graphics"]
margin_left = 4.0
margin_top = 31.0
margin_right = 1014.0
margin_bottom = 596.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="Settings" type="GridContainer" parent="SettingTabs/Graphics/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 985.0
margin_bottom = 540.0
columns = 2

[node name="DisplaymodeLabel" type="Label" parent="SettingTabs/Graphics/MarginContainer/Settings"]
margin_top = 3.0
margin_right = 87.0
margin_bottom = 17.0
text = "Display Mode"

[node name="DisplaymodeButton" type="OptionButton" parent="SettingTabs/Graphics/MarginContainer/Settings"]
margin_left = 864.0
margin_right = 960.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="Test" type="Button" parent="."]
margin_left = 403.0
margin_top = 216.0
margin_right = 586.0
margin_bottom = 259.0
text = "Test sound"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Test"]
stream = ExtResource( 1 )
bus = "Music"

[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/Settings/MasterVol/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/Settings/MusicVol/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="button_down" from="Test" to="." method="_on_Test_button_down"]
